--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -12,7 +12,7 @@
                 </div><!-- .entry-meta -->
             </header><!-- .entry-header -->
             <div class="entry-summary">
-                <%- post.excerpt %>  <!--autointro-->	
+                <%- post.content %>  <!--autointro-->	
                 </div><!-- .entry-summary -->
                 <div class="entry-more">
                     <a href="<%- url_for(post.path) %>" title="<%- post.title %>">more</a>
